--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:pratik.deoolwadikar@gmail.com"><i class="icon fa fa-envelope"> <span class="contact-button-header">Contact</span></i></a>
+        <a aria-label="Send email" href="mailto: ghulmukh10@gmail.com"><i class="icon fa fa-envelope"> <span class="contact-button-header">Contact</span></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}"><i class="icon fa fa-facebook-f" aria-hidden="true"></i></a>
         <!-- <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{ site.twitter_username }}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a> -->
         <!-- <a aria-label="My Google Plus" target="_blank" href="https://plus.google.com/{{ site.gplus_username }}"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a> -->
