--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} - {{ site.description }}</title>
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <link rel='shortcut icon' type='image/x-icon' href="{{ "/favicon.ico" | prepend: site.baseurl }}" />
+  <link rel='shortcut icon' type='image/x-icon' href="{{ "/g-logo.png" | prepend: site.baseurl }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 </head>
