--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       </div>
       <div class="header-links">
         <a class="link cool-link" href="#about" data-scroll>About Me</a>
-        <a class="link cool-link" target="_blank" href="{{ "/assets/files/Gauravhulmukh_Resume.pdf" | prepend: site.baseurl }}">Resume</a>
+        <a class="link cool-link" target="_blank" href="{{ "/assets/files/Gaurav_cv.pdf" | prepend: site.baseurl }}">Resume</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
